# openMenu-Virtual-Folder-Bundle

./: BUILD_INSTRUCTIONS.md  BUILD_WITH_DOCKER.md  CLASSICUBE_ANALYSIS.md  COMPILATION_VERIFICATION.md  DCNOW_IMPLEMENTATION.md  DCNOW_MODEM_IMPLEMENTATION.md  DC_NOW_COMPLETE.md  IMPLEMENTATION_STATUS.md  PULL_REQUEST.md  README.MD  build_openmenu.sh  build_openmenu_apple.sh
.claude/: settings.local.json
.github/workflows/: build-discross-cdi.yml  build.yml
GD MENU Card Manager/: README.md  build-win-x64-only.bat  build.bat  create-macos-bundle.sh
GD MENU Card Manager/src/: version.txt
GD MENU Card Manager/src/GDMENUCardManager/: AboutWindow.xaml  ArtworkWindow.xaml  ArtworkWindow.xaml.cs  AssignFolderWindow.xaml  AssignFolderWindow.xaml.cs  BatchFolderRenameWindow.xaml  BatchFolderRenameWindow.xaml.cs  DatToolsWindow.xaml  DatToolsWindow.xaml.cs  DependencyManager.cs  DiscImageOptionsWindow.xaml  DiscImageOptionsWindow.xaml.cs  FolderTreeNode.cs  GDMENUCardManager.csproj  InfoWindow.xaml  InfoWindow.xaml.cs  LockedFilesDialog.xaml  MainWindow.xaml  MainWindow.xaml.cs  MetadataScanDialog.xaml
GD MENU Card Manager/src/GDMENUCardManager.AvaloniaUI/: AboutWindow.axaml  AboutWindow.axaml.cs  App.config  ArtworkWindow.axaml  ArtworkWindow.axaml.cs  AssignFolderWindow.axaml  AssignFolderWindow.axaml.cs  DatToolsWindow.axaml  DatToolsWindow.axaml.cs  DependencyManager.cs  DiscImageOptionsWindow.axaml  DiscImageOptionsWindow.axaml.cs  GDMENUCardManager.AvaloniaUI.csproj  InfoWindow.axaml  InfoWindow.axaml.cs  LockedFilesDialog.axaml  MainWindow.axaml  MainWindow.axaml.cs  MetadataScanDialog.axaml
GD MENU Card Manager/src/GDMENUCardManager.Core/: BoxDatManager.cs  Constants.cs  Enumerators.cs  GDMENUCardManager.Core.csproj  GdItem.cs  Helper.cs  IconDatManager.cs  ImageHelper.cs  Manager.cs  MetaDatManager.cs  UndoManager.cs  UpdateVersion.ps1
GD MENU Card Manager/src/GDMENUCardManager.Core/Interface/: IDependencyManager.cs
GD Menu Card Manager/src/GDMENUCardManager/: AboutWindow.xaml  MainWindow.xaml.cs
GD Menu Card Manager/src/GDMENUCardManager.AvaloniaUI/: AboutWindow.axaml  MainWindow.axaml.cs
GD Menu Card Manager/src/GDMENUCardManager.Core/: GdItem.cs
openMenu/: .gitignore  VERSION.TXT
openMenu/src/openmenu/: CMakeLists.txt
openMenu/src/openmenu/src/: discross_main.c  main.c
openMenu/src/openmenu/src/backend/: gdemu_control.c
openMenu/src/openmenu/src/dchat/: dchat_api.c  dchat_api.h
openMenu/src/openmenu/src/dcnow/: dcnow_api.c  dcnow_api.h  dcnow_flash_isp.c  dcnow_flash_isp.h  dcnow_json.c  dcnow_json.h  dcnow_menu.c  dcnow_menu.h  dcnow_net_init.c  dcnow_net_init.h  dcnow_vmu.c  dcnow_vmu.h  dcnow_worker.c  dcnow_worker.h
openMenu/src/openmenu/src/ui/: draw_kos.c  ui_bg.c  ui_bg.h  ui_draw_state_dispatch.h  ui_folders.c  ui_grid.c  ui_line_desc.c  ui_marquee.c  ui_marquee.h  ui_menu_credits.c  ui_menu_credits.h  ui_scroll.c
openMenu/src/openmenu/src/ui/dc/: input.c  input.h
openMenu/src/openmenu/src/vm2/: vm2_api.c  vm2_api.h
openMenu/src/openmenu_settings/include/: openmenu_savefile.h  openmenu_settings.h
openMenu/src/openmenu_settings/src/: openmenu_savefile.c  openmenu_settings.c
openMenu/src/openmenu_shared/src/backend/: gd_list.c
openMenu/tools/: build_discross_cdi.sh  discross_ip.txt  setup_kos_env.sh
